Fix: folder struture and UI overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@
 /* Google font */
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"); */
 
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two&family=Poppins:wght@200;300;400;500;600&display=swap');
+
 @font-face {
     font-family: 'Avenir';
     src: local('Avenir Roman'), local('Avenir-Roman'),
@@ -19,7 +21,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Avenir', sans-serif;
-  @apply min-h-screen max-h-full overflow-x-hidden flex items-center justify-center
+  @apply min-h-screen overflow-x-hidden flex items-center justify-center
 }
 
 a {
